--- a/cities.html
+++ b/cities.html
@@ -23,10 +23,10 @@
   <li>Detroit</li>
   <li>Eldorado</li>
   <li>Fillmore</li>
-  <li>Gina</li>
   <li>Greenville</li>
   <li>Houston</li>
   <li>Illinois</li>
+  <li>Jacksonvill</li>
 <!-- ALPHABET END -->
 </ul>
 </div>
