--- a/pilots.html
+++ b/pilots.html
@@ -25,7 +25,8 @@
   <li>Foxtrot</li>
   <li>Golf</li>
   <li>Hotel</li>
-  <li>India</li>ll
+  <li>India</li>
+  <li>Jet Blue</li>
 <!-- ALPHABET END -->
 </ul>
 </div>
